# builder

./: Cargo.toml  README.md
examples/fizzbuzz/: Package.toml
examples/fizzbuzz_asm/: Package.toml
examples/fizzbuzz_asm/src/: main.asm
examples/helloworld/: Package.toml
examples/helloworld/src/: main.sb
examples/helloworld_asm/: Package.toml
examples/sum/: Package.toml
examples/sum/src/: main.sb
examples/sum_sblang/: Package.toml
examples/sum_sblang/src/: main.sb
src/: command.rs  config.rs  main.rs
src/command/: build.rs  debug.rs  info.rs  init.rs  new.rs  oneshot.rs  run.rs
src/command/utils/: build.rs  convert.rs
src/command/utils/convert/: bank.rs  bin.rs  raw.rs
src/config/: build.rs  link.rs  package.rs  run.rs
