[package]
name = "sb_builder_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
bpaf = { version = "0.9.15", features = ["derive"] }
sb_dbg_tui = { git = "https://github.com/shinrabansyo/debugger", rev = "f1364e9645869c79f59d4fde33654ab7d3aa43b3" }
